WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101221
Webkit does not handle some media keys correctly On Linux gtk platform.
https://bugs.webkit.org/show_bug.cgi?id=101221
Summary
Webkit does not handle some media keys correctly On Linux gtk platform.
Peng Huang
Reported
2012-11-05 07:48:16 PST
I am using media keyboard (Microsoft Ergonomic keyboard 4000). The DOM can not receive correct key events of all media keys (VKEY_BROWSER_BACK, FROWARD, and etc)
Attachments
Patch
(4.45 KB, patch)
2012-11-05 07:52 PST
,
Peng Huang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peng Huang
Comment 1
2012-11-05 07:52:36 PST
Created
attachment 172335
[details]
Patch
Peng Huang
Comment 2
2012-11-05 13:51:25 PST
Hi Alexey, Could you please review the patch for this issue? Thanks.
WebKit Review Bot
Comment 3
2012-11-05 14:57:11 PST
Comment on
attachment 172335
[details]
Patch Clearing flags on attachment: 172335 Committed
r133531
: <
http://trac.webkit.org/changeset/133531
>
WebKit Review Bot
Comment 4
2012-11-05 14:57:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug