Webkit does not handle some media keys correctly On Linux gtk platform. https://bugs.webkit.org/show_bug.cgi?id=101221

Patch by Peng Huang <penghuang@google.com> on 2012-11-05
Reviewed by Alexey Proskuryakov.

Add media keyboard support on Linux gtk platform.

* platform/chromium/KeyCodeConversionGtk.cpp:
(WebCore::windowsKeyCodeForKeyEvent):

Canonical link: https://commits.webkit.org/119349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133531 268f45cc-cd09-0410-ab3c-d52691b4dbfc